[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/enemies sprites/worm/worm_hit_anim_strip_3.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Worm.gd" type="Script" id=4]
[ext_resource path="res://Assets/enemies sprites/worm/worm_death_anim_strip_6.png" type="Texture" id=5]
[ext_resource path="res://Assets/enemies sprites/worm/worm_walk_anim_strip_6.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Death"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Hit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Move"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7, 3 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 4 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 4 )

[node name="Worm" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 6 )
hframes = 6

[node name="AnimationPlayer" parent="." index="1"]
anims/Death = SubResource( 1 )
anims/Hit = SubResource( 2 )
anims/Move = SubResource( 3 )

[node name="Collisor" parent="." index="2"]
shape = SubResource( 4 )

[node name="Collisor" parent="Hurtbox" index="0"]
position = Vector2( 0, 0 )
shape = SubResource( 5 )

[node name="Collisor" parent="Hitbox" index="0"]
shape = SubResource( 6 )

[node name="FrontFloor" parent="Senses" index="0"]
position = Vector2( 7, 4 )

[node name="RearFloor" parent="Senses" index="1"]
position = Vector2( -7, 4 )

[node name="FrontWall" type="RayCast2D" parent="Senses" index="2"]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 6, 0 )
collision_mask = 2

[node name="FloorSense" type="RayCast2D" parent="Senses" index="3"]
position = Vector2( 14, 4 )
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 2

[editable path="Hurtbox"]
[editable path="Hitbox"]
